<resources>

    <string name="app_name">郊游客(北京)</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">郊游客</string>
    <!-- 首页 -->
    <string name="home_title">郊游客</string>
    <string name="home_nearby">附近</string>
    <string name="home_plan">计划出行</string>
    <string name="home_promote_sales_detail">寻找最新活动</string>
    <string name="home_heat_power_detail">出行景点是否拥堵 避开高峰</string>
    <string name="home_search_label">搜索</string>
    <string name="home_search_hint">景点,农家院等...</string>

    <!-- common -->
    <string name="common_play">游玩</string>
    <string name="common_farm_home">农家乐</string>
    <string name="common_mountain_villa">休闲山庄</string>
    <string name="common_spherical">农产品</string>
    <string name="common_drive_line">自驾路线</string>
    <string name="common_resort">度假休闲</string>
    <string name="common_area_spots">区域景点</string>
    <string name="common_market">乡村市集</string>
    <string name="common_parent_child">亲子</string>
    <string name="common_pick">采摘</string>
    <string name="common_mountain">爬山</string>
    <string name="common_fishing">垂钓</string>
    <string name="common_scenic_spots">景点</string>
    <string name="common_food">美食</string>
    <string name="common_hotel">住宿</string>
    <string name="common_line">经典路线</string>
    <string name="common_area">区域</string>
    <string name="common_search">高级搜索</string>
    <string name="common_promote_sales">活动</string>
    <string name="common_activity">活动</string>
    <string name="common_promotions">促销</string>
    <string name="common_heat_power">爆棚指数</string>
    <string name="common_home">首页</string>
    <string name="common_checkin">签到</string>
    <string name="common_my">我的</string>
    <string name="common_my_farm">我的郊游客</string>
    <string name="common_more">更多</string>
    <string name="common_arrows">箭头</string>
    <string name="common_refresh">刷新</string>
    <string name="common_partition_h_live">水平分隔线</string>
    <string name="common_partition_v_live">竖直分隔线</string>
    <string name="common_characteristic">特色</string>
    <string name="common_view_pic">景点照片</string>
    <string name="yes">是</string>
    <string name="common_loading">载入中...</string>
    <string name="common_not_find">没有找到符合的地方</string>
    <string name="common_retry">重试</string>
    <string name="common_reserve">预定</string>
    <string name="common_order">排行</string>
    <string name="common_share">分享</string>
    
    <!-- 农产品页面 -->
    <string name="produce_pick">采摘</string>
    <string name="produce_market">市集</string>
    <string name="produce_vegetable">谷蔬</string>
    <string name="produce_egg">鸡蛋</string>
    <string name="produce_fish">鱼</string>
    <string name="produce_duck">禽类</string>
    <!-- 更多页面 -->
    <string name="more_update_data">更新本地数据</string>
    <string name="more_clear_data">清除缓存</string>
    <string name="more_update_version">检测新版本</string>
    <string name="more_disclaimer">免责声明</string>
    <string name="more_disclaimer_content">  1.郊游客暂只提供相应的郊区旅游信息。\n\n  2.郊游客不参与旅游商家的经营活动。\n\n  3.郊游客不断核对不实信息和错误信息。\n\n  4.禁止利用郊游客做任何违法活动。</string>
    <string name="more_contact_us_content">   您可以通过以下方式找到我们：\n\n 1.微博：@郊游客微博  \n\n  2.微信：love_outing	\n\n  3.邮箱:tianhaocto@gmail.com。\n\n  4.电话:13301293656。</string>
    <string name="more_disclaimer_confirm">确定</string>
    <string name="more_advise_to_us">建议反馈</string>
    <string name="more_contact_to_us">联系我们</string>
    <string name="more_about_us">关于</string>
    <string name="more_band_qq">绑定腾讯微博</string>
    <string name="more_band_sina">绑定新浪微博</string>

    <!-- 更多页面 -->
    <string name="feedback_title">非常感谢您对郊游客提出建议，这是让我们做出更好软件的动力!</string>
    <string name="editFeedbackMsg">请输入您的建议(200字以内)</string>
    <string name="editFeedbackContactWay">您的邮箱(选填)</string>
    <string name="feedbackButton">提交</string>

    <!-- 详细页面 -->
    <string name="detail_error_phoneno">无效电话号码</string>
    <string name="detail_error_url">无效的URL</string>
    <string name="detail_location_address">当前位置</string>
    <string name="around_farm">周边农家乐</string>
    <string name="add_this_trip">加入行程</string>
    <string name="detail_this_trip">行程</string>
    <string name="no_around_farm">获取周边的农家乐失败，请重试。</string>
    <string name="no_comment">获取评价失败，请重试。</string>
    <string name="not_find_around_farm">该景点周边没有农家乐</string>
    <string name="not_find_comment_farm">还没有评价，添加一个吧。</string>
    <string name="add_comment">添加点评</string>
    <string name="comment_content">点评信息</string>

    <!-- 微博发送页面 -->
    <string name="weibosdk_send">发送</string>
    <string name="weibosdk_photo">拍照</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_checkin_sucess">签到成功！</string>
    <string name="weibosdk_checkin_failed">签到失败！</string>
    <string name="weibosdk_send_failed">分享失败！</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_comment">评论</string>
    <string name="weibosdk_forward">转发</string>
    <string name="weibosdk_fav">收藏</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>

    <!-- reminding -->
    <string name="reminding_select_area">请选择区域</string>
    <string name="reminding_select_all">全选</string>
    <string name="reminding_select_classic_only">是否仅选择经典</string>
    <string name="reminding_select_classic">经典</string>
    <string name="reminding_select_label">请选择标签</string>
    <string name="reminding_select_return_count">请选择返回数目</string>
    <!-- result -->
    <string name="detail_favorites">收藏</string>
    <string name="detail_checkin">签到</string>
    <string name="detail_correction">纠错</string>
    <string name="detail_share">分享</string>
    <string name="detail_preferentialInfo">优惠信息</string>
    <string name="classic_line_summary">线路概要</string>
    <string name="classic_line_help">点击景点查看详情</string>
    <!-- lines -->
    <string name="lines_start_point">起点:</string>
    <string name="lines_end_point">终点:</string>
    <string name="lines_details">线路详情:</string>
    <string name="lines_content">推荐理由:</string>
    <string name="lines_button_showDetail">点击显示路线详情</string>
    <string name="lines_button_hideDetail">点击隐藏路线详情</string>
    <!-- title -->
    <string name="title_activity_nearby">商户列表</string>
    <string name="title_activity_detail">商户信息</string>
    <string name="title_activity_detail_pic">商户照片</string>
    <string name="title_activity_my_favorite">我的收藏</string>
    <string name="title_activity_my_this_trip">我的行程</string>
    <string name="title_activity_classicLine">经典路线</string>
    <string name="button_back">返回</string>
    <string name="button_map">地图模式</string>
    <string name="button_write_comment">写评论</string>
    <string name="title_detail_on_map">景点位置</string>
    <string name="button_search">开始查找</string>
    <string name="list_item_name">list_name</string>
    <string name="title_map_line">路线</string>

    <!-- 下拉、上拉刷新效果 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <!-- 推送消息 -->
    <string name="newNotification">郊游客</string>
    <string name="notificationTitle">郊游客推荐景点</string>
    <string name="notificationContent">ccc</string>

    <!-- Tag标记用 -->
    <string name="tag_first">1</string>
    <string name="tag_second">2</string>

    <string-array name="spinner_nearby_distance">
        <item>附近1km</item>
        <item>附近5km</item>
        <item>附近10km</item>
        <item>附近20km</item>
        <item>附近50km</item>
        <item>附近100km</item>
    </string-array>
    <string-array name="spinner_nearby_sort">
        <item>热度排序</item>
        <item>价格排序</item>
    </string-array>
    <string-array name="list_labels">
        <item>爬山</item>
        <item>玩水</item>
        <item>探险</item>
    </string-array>
    <string-array name="list_count">
        <item>10</item>
        <item>20</item>
        <item>100</item>
    </string-array>

    <!--
    <item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>
    -->
    <string name="title_activity_share_content">ShareContentActivity</string>

</resources>