<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- title -->

    <LinearLayout
        android:id="@+id/LinearLayout_toppanel"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/home_top" >

        <include 
	        android:id="@+id/ImageView_button_back"
	        layout="@layout/back_menu"/>
        
        <TextView
            android:id="@+id/TextView_toppanel_title"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ImageView_button_map"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_map" />
    </LinearLayout>

    <!-- 底部4按钮内容显示区 -->
    <LinearLayout
        android:id="@+id/LinearLayout_detail_context"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout_toppanel"
        android:layout_above="@+id/Layout_detail_panelBottom"
        android:orientation="vertical" >
    </LinearLayout>

    <!-- 底部工具栏 -->
    <LinearLayout
        android:id="@+id/Layout_detail_panelBottom"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/home_bottom"
        android:baselineAligned="false"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/TextView_panelBottom_detail_favorites"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/detail_favorites"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/TextView_panelBottom_detail_checkin"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/detail_checkin"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/TextView_panelBottom_detail_correction"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/detail_correction"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/TextView_panelBottom_detail_share"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/detail_share"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>

</RelativeLayout>