<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 单个景点在地图上显示 title -->
    <LinearLayout
        android:id="@+id/toppanel"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/home_top" >

        <include 
	        android:id="@+id/ImageView_button_back"
	        layout="@layout/back_menu"/>
        
		<TextView
            android:id="@+id/TextView_toppanel_title"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="@string/title_detail_on_map"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/spinner_nearby_distance_right"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingLeft="5dp"
            android:paddingRight="6dp"
            android:contentDescription="@string/common_partition_v_live"
            android:paddingTop="10dp"
            android:src="@drawable/partition_v_line" />
        
        <TextView
            android:id="@+id/TextView_map_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:gravity="right"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/title_map_line"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <!-- Baidu Map -->
    <com.baidu.mapapi.MapView
        android:id="@+id/bmapsView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
       	android:layout_below="@+id/toppanel" 
        android:clickable="true" />

</RelativeLayout>