<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- title -->

    <LinearLayout
        android:id="@+id/LinearLayout_toppanel"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/home_top" >

        <include
            android:id="@+id/ImageView_button_back"
            layout="@layout/back_menu" />

        <TextView
            android:id="@+id/TextView_toppanel_title"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/title_activity_classicLine"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ImageView_button_map"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_map" />
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Layout_detail_panelBottom"
        android:layout_below="@+id/LinearLayout_toppanel"
        android:background="@color/white" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- name -->

            <LinearLayout
                android:id="@+id/LinearLayout_classicline_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView_classicline_name"
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    android:paddingLeft="10dp"
                    android:text="@string/common_line"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/common_partition_h_live"
                    android:src="@drawable/partition_h_line" />
            </LinearLayout>

            <!-- 路线概要 -->

            <LinearLayout
                android:id="@+id/LinearLayout_line_summary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinearLayout_classicline_name"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    android:paddingLeft="10dp"
                    android:text="@string/classic_line_summary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/TextView_line_summary"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="这是路线概要 ！"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/common_partition_h_live"
                    android:src="@drawable/partition_h_line" />
            </LinearLayout>

            <!-- 地图 -->

            <LinearLayout
                android:id="@+id/LinearLayout_line_map"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinearLayout_line_summary"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    android:paddingLeft="10dp"
                    android:text="@string/lines_details"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/ImageView_line_map"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/home_placeholder_pic" >
                </ImageView>
            </LinearLayout>

            <!-- 线路详情 -->

            <LinearLayout
                android:id="@+id/ListView_Line_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinearLayout_line_map"
                android:orientation="vertical" >
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <!-- 底部工具栏 -->

    <RelativeLayout
        android:id="@+id/Layout_detail_panelBottom"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/ListView_share"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:background="@drawable/share"
            android:text="@string/detail_share"
            android:textSize="10sp" 
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>